@@ -1,3 +1,9 @@
+2003-01-09  Christian Cornelssen  <ccorn@cs.tu-berlin.de>
+
+	* Makefile.tpl (BASE_FLAGS_TO_PASS): Also pass DESTDIR.
+	(install-info, dir.info): Prepend $(DESTDIR) to $(infodir).
+	* Makefile.in: Regenerate.
+
 2003-01-09  Alexandre Oliva  <aoliva@redhat.com>
 
 	* configure.in: Remove Makefile in build, host and target modules
